# equity-pilot

./: .gitignore  BTC_Report.html  README.md  demo_agent.py  main.py  portfolio.json  prompt_to_app.py  pyproject.toml  server.py
agent/: agent.py
config/: config.py
mcp_server/: file_folder_management_tools.py  mcp_server.py  yscreener_tools.py
mcp_server/orchestrator/: agent.py  orchestrator_mcp_server.py
mcp_server/worker/: worker_mcp_server.py  yscreener_tools.py
