[project]
name = "equity-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "fastmcp[apps]>=3.1.0",
    "httpx>=0.27.0",
    "mcp>=1.27.0",
    "ollama>=0.3.0",
    "prefab-ui>=0.19.0",
    "python-dotenv>=1.0.0",
    "yfinance>=1.3.0",
]
[tool.setuptools.packages.find]
where = ["src"]
